--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -60,11 +60,8 @@ body {
     #app {
       display: flex;
       overflow: hidden;
-      height: calc(100vh - 60px);
+      height: calc(100vh);
       @import "dashboard/dashboard";
-    }
-    footer {
-      height: rem(60px);
     }
   }
 }
