--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,5 @@
 //Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,300i,400,400i,600,600i,700,700i|Source+Sans+Pro:300,300i,400,400i,600,600i');
+@import url('https://fonts.googleapis.com/css?family=Nunito:600,600i|Source+Sans+Pro:400,400i');
 
 //Bootstrap with custom variables
 @import "~bootstrap/scss/functions";
