--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -251,15 +251,18 @@ html, body {
   td {
     &:nth-child(1) {
       width: 15%;
+      max-width: 15%;
       font: {
         family: $font-header;
       }
     }
     &:nth-child(2) {
       width: 50%;
+      max-width: 50%;
     }
     &:nth-child(3) {
       width: calc(100% - 15% - 50%);
+      max-width: calc(100% - 15% - 50%);
     }
   }
   input {
