--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10235,16 +10235,15 @@ body.landingpage .hero .btn {
   border: 3px solid orange;
   margin-top: 50px;
 }
+body.landingpage footer {
+  height: 70px;
+  background-color: black;
+}
 body.landingpage .About {
+  margin-top: 300px;
   width: 100vw;
   height: 100vh;
-  color: white;
-}
-body.landingpage .row {
-  margin-top: 300px;
-}
-body.landingpage .img-fluid {
-  margin-left: 30px;
+  color: black;
 }
 body#dashboard {
   background: #f1f1f1;
