--- a/resources/assets/sass/landingpage/_content.scss
+++ b/resources/assets/sass/landingpage/_content.scss
@@ -23,21 +23,14 @@
   }
 }
 
+footer {
+  height: 70px;
+  background-color: black;
+}
+
 .About {
+  margin-top: 300px;
   width: 100vw;
   height: 100vh;
-  color: white;
-}
-
-.row {
-margin-top: 300px;
-
-}
-
-.img-fluid {
-margin-left: 30px;
-}
-
-.col-6 {
-
+  color: black;
 }
