--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -275,3 +275,13 @@ html, body {
 }
 
 .highlighted { color: red }
+
+td{
+  position: relative;
+}
+
+.clearInput{
+  position: absolute;
+  top:62px;
+  right: 20px;
+}
